// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderTop renders 0 1`] = `
Array [
  .c0 {
  border-top: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTop renders function 1`] = `
Array [
  .c0 {
  border-top: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTop renders invalid theme path 1`] = `
Array [
  .c0 {
  border-top: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTop renders negative number 1`] = `
Array [
  .c0 {
  border-top: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTop renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-top: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-top: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-top: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-top: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-top: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTop renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-top: July;
  }
}

@media April {
  .c0 {
    border-top: August;
  }
}

@media January {
  .c0 {
    border-top: September;
  }
}

@media April {
  .c0 {
    border-top: November;
  }
}

@media June {
  .c0 {
    border-top: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-top: July;
  }
}

@media April {
  .c0 {
    border-top: August;
  }
}

@media January {
  .c0 {
    border-top: September;
  }
}

@media April {
  .c0 {
    border-top: November;
  }
}

@media June {
  .c0 {
    border-top: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top: January;
  }
}

@media April {
  .c0 {
    border-top: December;
  }
}

@media January {
  .c0 {
    border-top: April;
  }
}

@media April {
  .c0 {
    border-top: May;
  }
}

@media June {
  .c0 {
    border-top: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-top: January;
  }
}

@media April {
  .c0 {
    border-top: December;
  }
}

@media January {
  .c0 {
    border-top: April;
  }
}

@media April {
  .c0 {
    border-top: May;
  }
}

@media June {
  .c0 {
    border-top: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderTop renders postitive number 1`] = `
Array [
  .c0 {
  border-top: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTop renders string 1`] = `
Array [
  .c0 {
  border-top: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderTop renders valid theme path 1`] = `
Array [
  .c0 {
  border-top: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-top: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
